fix: promocodes and expenses windows overflowing

--- a/frontend/src/pages/Admin/SalesManagement.css
+++ b/frontend/src/pages/Admin/SalesManagement.css
@@ -13,3 +13,8 @@
     margin: 5px;
   }
 }
+
+.expenses-table {
+  overflow: scroll;
+  max-height: 400px;
+}
